@@ -154,9 +154,6 @@ gboolean	gedit_document_is_untitled 	(const GeditDocument* doc);
 gboolean	gedit_document_get_modified 	(const GeditDocument* doc);
 
 gboolean	gedit_document_get_deleted	(GeditDocument *doc);
-
-gint		gedit_document_get_char_count	(const GeditDocument *doc);
-gint		gedit_document_get_line_count 	(const GeditDocument *doc);
 		
 void		gedit_document_insert_text	(GeditDocument *doc, 
 						 gint	        pos,
