@@ -1,3 +1,9 @@
+2004-10-05  Paolo Borelli  <pborelli@katamail.com>
+
+	* plugins/docinfo/docinfo.c: update for gedit-document changes.
+	* plugins/sort/sort.c: update for gedit-document changes.
+	* plugins/spell/spell.c: update for gedit-document changes.
+
 2004-09-15  Vinay M R  <vinay.mandyakoppal@wipro.com>
 
 	* time/time.c: Help invocation for "Insert date and time" is
