@@ -1,3 +1,9 @@
+2004-10-05  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit-document.[ch]: remove wrappers for line_count and char_count.
+	* gedit-document-server.c: update for the above.
+	* gedit-print.c: ditto.
+
 2004-10-12  Chris Kelso  <ckelso@heliosphere.org>
 
 	* Makefile.am: fix linking issues.
